// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewDashboard renders dashboard 1`] = `
<div>
  <div>
    EditBar
  </div>
  <div
    class="dashboard-wrapper"
    style="height: 656px;"
  >
    <div>
      EditTitleBar
    </div>
    <div>
      EditItemGrid
    </div>
  </div>
</div>
`;

exports[`NewDashboard renders print preview 1`] = `
<div>
  <div>
    EditBar
  </div>
  <div>
    LayoutPrintPreview
  </div>
</div>
`;
